⏫ Updated mod to 1.20.6 (Testing required)